z-index bug handle

--- a/components/HamburgerModal/HamburgerModal.module.scss
+++ b/components/HamburgerModal/HamburgerModal.module.scss
@@ -14,7 +14,7 @@
     bottom: 0;
     width: 100%;
     background-color: rgb(255 255 255);
-    z-index: 1;
+    z-index: 10;
     transition: all ease 0.4s;
     transform: translateX(-100%);
 
