--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -4,7 +4,7 @@
 .menu {
   display: none;
   position: fixed;
-  z-index: 9;
+  z-index: 11;
   top: 3.3%;
 
   @include breakpoint-max(tablet) {
@@ -18,8 +18,6 @@
   background-color: #000;
   margin-left: 2rem;
   position: absolute;
-  cursor: pointer;
-  z-index: 9999;
 
   &:before {
     position: absolute;
@@ -29,7 +27,6 @@
     height: 2px;
     background-color: #000;
     transition: ease 0.4s;
-    z-index: 9999;
   }
 
   &:after {
@@ -40,14 +37,12 @@
     height: 2px;
     background-color: #000;
     transition: ease 0.4s;
-    z-index: 9999;
   }
 }
 
 .active {
   background-color: transparent;
   position: absolute;
-  z-index: 9999;
 
   &:before,
   &:after {
