--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -29,7 +29,7 @@
       color: #ffffff;
       font-weight: 700;
       font-size: 4rem;
-      z-index: 10;
+      z-index: 8;
       pointer-events: none;
     }
 
